--- a/sites/categories.html
+++ b/sites/categories.html
@@ -588,7 +588,7 @@
 
             <div class="section">
                 <div style="display: flex; flex-direction: column; gap: 10px;">
-                    <button id="exportBtn" style="background-color: green;" onclick="window.location.hash = '#newgame'; window.location.reload();">Fertig</button>
+                    <button id="doneBtn" style="background-color: green;" onclick="window.location.hash = '#newgame';">Fertig</button>
                 </div>
             </div>
 
