--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="icon-192.png">
+  <link rel="apple-touch-icon" href="icons/android-chrome-192x192.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <style>
@@ -31,8 +31,10 @@
     <main id="content" class="contentHolder"></main>
 
   <script>
-    sessionStorage.clear();
-    console.log("Session storage cleared");
+    // Nur beim erstmaligen Laden (kein Hash = keine Seite aktiv) sessionStorage leeren
+    if (!location.hash || location.hash === '#home') {
+      sessionStorage.removeItem("gameData");
+    }
   </script>
 
   <script src="main.js"></script>
