--- a/sites/newgame.html
+++ b/sites/newgame.html
@@ -7,19 +7,18 @@
     .newgame-page {
         width: 100%;
         max-width: 500px;
-        margin: 0 auto;
-        padding: 15px;
+        height: 100%;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     .newgame-page .card {
         background: linear-gradient(to bottom right, #222831, #1a1e24);
-        border-radius: 20px;
+        border-radius: 15px;
         color: #fff;
         box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
         padding: 30px;
         width: 100%;
-        max-height: 85vh;
+        height: 100%;
         display: flex;
         flex-direction: column;
         overflow: hidden;
@@ -366,7 +365,7 @@
     .error-popup .popup-header { background: #FF2E63; }
 
     @media (max-height: 700px) {
-        .newgame-page .card { padding: 20px; max-height: 95vh; }
+        .newgame-page .card { padding: 20px; }
         .newgame-page .playerList { height: 200px; }
         .newgame-page #startGame { width: 130px; height: 130px; }
     }
