--- a/sites/newgame.html
+++ b/sites/newgame.html
@@ -371,6 +371,7 @@
     }
 
     @media (max-width: 480px) {
+        .newgame-page .card { padding: 20px 15px; }
         .newgame-page h1 { font-size: 1.8rem; }
         .newgame-page .section-title { font-size: 1.2rem; }
         .newgame-page .count-number { font-size: 1.6rem; }
