--- a/sites/home.html
+++ b/sites/home.html
@@ -44,7 +44,7 @@
   .home-page .fakeit-logo {
     width: 100%;
     max-width: 350px;
-    margin-bottom: 40px;
+    margin-bottom: clamp(10px, 5vh, 40px);
     height: auto;
     border-radius: 12px;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
