--- a/sites/newgame.html
+++ b/sites/newgame.html
@@ -91,6 +91,7 @@
 
     .newgame-page #playerName {
         flex: 1;
+        max-width: 250px;
         padding: 12px;
         border-radius: 8px;
         border: none;
