--- a/sites/newgame.html
+++ b/sites/newgame.html
@@ -51,7 +51,9 @@
         display: flex;
         flex-direction: column;
         height: 250px;
-        width: 100%;
+        width: fit-content;
+        min-width: 200px;
+        align-self: center;
         border: 1px solid rgba(255, 255, 255, 0.1);
         border-radius: 12px;
         padding: 15px;
