--- a/sites/info.html
+++ b/sites/info.html
@@ -342,7 +342,7 @@
             </div>
 
             <div class="section-title">Copyright & Lizenz</div>
-            <p class="info-text">Copyright 2025-<span class="year"></span> Felix Hausmann</p>
+            <p class="info-text">Copyright 2025-2026 Felix Hausmann</p>
             <p class="info-text">Dieses Spiel ist vom beliebten Social-Deduction-Genre inspiriert, enthält aber eigene Spielelemente und ein eigenes Design.</p>
             <p class="info-text">Der Code dieser App und die wesentlichen Spiel-Mechaniken sind unter der
                 <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License 2.0</a>
@@ -354,11 +354,7 @@
         <button class="back-btn" onclick="window.location.hash='#home'">Zurück</button>
 
         <div class="copyright">
-            © 2025-<span class="year"></span> Felix Hausmann • Version 2.0.0
+            © 2025-2026 • Felix Hausmann • Version 2.0.0
         </div>
-        <script>
-            // Dynamisch das aktuelle Jahr in der Copyright-Anzeige setzen
-            document.querySelectorAll('.year').forEach(el => el.textContent = new Date().getFullYear());
-        </script>
     </div>
 </div>
